--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -10,7 +10,26 @@
 html,
 body {
   font-family: cooper_hewittbook;
-  // font-family: Arial, Helvetica, sans-serif;
+  line-height: 2em;
+}
+h1 {
+  font-size: 60px;
+  margin-bottom: 2rem;
+}
+
+h4,
+h5,
+h6 {
+  line-height: 2em;
+}
+h1,
+h2,
+h3,
+strong {
+  font-family: cooper_hewittbook_bold;
+}
+em {
+  font-family: cooper_hewittbook_italic;
 }
 .App {
   min-height: 100vh;
