--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,19 +1,13 @@
 @import './styles/custom-properties.scss';
 @import './styles/stylesheet.scss';
-// @font-face {
-//   font-family: 'cooper_hewittbook';
-//   src: url('./fonts/cooperhewitt-book-webfont.woff2') format('woff2'),
-//     url('./fonts/cooperhewitt-book-webfont.woff') format('woff');
-//   font-weight: normal;
-//   font-style: normal;
-// }
+
 html,
 body {
   font-family: cooper_hewittbook;
   line-height: 2em;
+  overflow-x: hidden;
 }
 h1 {
-  font-size: 60px;
   margin-bottom: 2rem;
 }
 
@@ -34,4 +28,8 @@ em {
 .App {
   min-height: 100vh;
   min-width: 100vw;
+  max-width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
