--- a/src/styles/custom-properties.scss
+++ b/src/styles/custom-properties.scss
@@ -2,8 +2,8 @@
 
 @font-face {
   font-family: 'cooper_hewittbook';
-  src: url('../fonts/cooperhewitt-book-webfont.woff2') format('woff2'),
-    url('../fonts/cooperhewitt-book-webfont.woff') format('woff');
+  src: url('./fonts/cooperhewitt-book-webfont.woff2') format('woff2'),
+    url('./fonts/cooperhewitt-book-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
@@ -12,7 +12,8 @@
   --white: #ffffff;
   --lightest-gray: #f3f5f7;
   --light-gray: #c3c3c3;
-  --button: #c4ccd4;
+  --light-button: #c4ccd4;
+  --dark-button: #3c3c3c;
   --dark-gray: #3f3f3f;
   --overlay: rgba(0, 0, 0, 0.5);
   --blue: #4183c4;
@@ -21,19 +22,34 @@
   --black: #000000;
   /* Measurements */
   --nav-height: 5rem;
-  --footer-height: 6rem;
+  --footer-height: 12rem;
+  --min-width-big-screen: 1252px;
+  --max-width-mobile: 1251px;
 }
 
 @mixin lightButton {
   background-color: transparent;
-  color: var(--button);
+  color: var(--light-button);
   font-size: x-large;
   padding: 1rem 2rem;
-  border: 2px solid var(--button);
+  border: 2px solid var(--light-button);
   border-radius: 2rem;
   &:hover {
-    background-color: var(--button);
+    background-color: var(--light-button);
     color: var(--black);
+    transition: all 0.3s ease-in-out;
+  }
+}
+@mixin darkButton {
+  background-color: transparent;
+  color: var(--dark-button);
+  font-size: x-large;
+  padding: 1rem 2rem;
+  border: 2px solid var(--dark-button);
+  border-radius: 2rem;
+  &:hover {
+    background-color: var(--dark-button);
+    color: var(--light-button);
     transition: all 0.3s ease-in-out;
   }
 }
