--- a/src/components/NavBar.module.scss
+++ b/src/components/NavBar.module.scss
@@ -1,13 +1,11 @@
 @import '../styles/custom-properties.scss';
 
 .navBar {
-  height: var(--nav-height);
+  min-height: var(--nav-height);
+  width: 100vw;
   max-width: 100vw;
   background-color: transparent !important;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
+  position: static;
 }
 
 .logo {
