--- a/src/pages/Services/Services.module.scss
+++ b/src/pages/Services/Services.module.scss
@@ -2,7 +2,7 @@
 @import '../../styles/custom-properties.scss';
 
 .services {
-  padding: var(--nav-height) 0 var(--footer-height) 0;
+  padding: 0 0 var(--footer-height) 0;
   display: flex;
   flex-direction: column;
   position: relative;
@@ -11,6 +11,7 @@
 .translate {
   align-self: flex-end;
   margin: 2rem 3rem;
+  color: #000000;
 }
 
 .services > h1 {
