--- a/src/styles/custom-properties.scss
+++ b/src/styles/custom-properties.scss
@@ -62,8 +62,8 @@
   border: 2px solid var(--black);
   border-radius: 2rem;
   &:hover {
-    background-color: var(--button);
-    color: var(--black);
+    background-color: black;
+    color: var(--lightest-gray);
     transition: all 0.3s ease-in-out;
   }
 }
