--- a/src/pages/Landing/Landing.module.scss
+++ b/src/pages/Landing/Landing.module.scss
@@ -2,7 +2,21 @@
 
 .landing {
   background: url('../../assets/01.jpg') no-repeat fixed center;
-  min-height: 100vh;
+}
+.logoRow {
+  height: 20vh;
+  min-width: 100vw;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+.logoRow > img {
+  margin: 1rem;
+  max-width: 120px;
+}
+
+.buttonRow {
+  height: 80vh;
   min-width: 100vw;
   display: flex;
   justify-content: space-evenly;
