added display none to social media a tags in navbar for small mobile devices

--- a/src/components/NavBar.module.scss
+++ b/src/components/NavBar.module.scss
@@ -18,6 +18,11 @@
   &:hover {
     background-color: transparent;
   }
+  @media (pointer: coarse) {
+    @media screen and (max-width: $breakpoint-extra-large) {
+      display: none;
+    }
+  }
 }
 .icon {
   margin-top: 30%;
