--- a/src/pages/About/About.module.scss
+++ b/src/pages/About/About.module.scss
@@ -44,14 +44,11 @@
 }
 .mainPic {
   width: 70%;
+  max-width: 1000px;
   position: absolute;
   right: 0;
   top: 0;
   z-index: 0;
-  // @media screen and (min-width: $breakpoint-extra-large) {
-  //   width: 55%;
-  //   right: calc(10vw);
-  // }
 }
 .section2 {
   width: 100%;
