initial coding of calendar page

--- a/src/pages/Calendar/Calendar.module.scss
+++ b/src/pages/Calendar/Calendar.module.scss
@@ -2,5 +2,290 @@
 @import '../../styles/custom-properties.scss';
 
 .calendar {
+  padding: 0 0 var(--footer-height) 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  background-color: var(--lightest-gray);
+}
+
+.calendar > h1 {
+  margin-bottom: 4rem;
+}
+
+.icon {
+  display: inline-block;
+  vertical-align: middle;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+  -moz-osx-font-smoothing: grayscale;
+  font-feature-settings: 'liga';
+}
+
+/* VARIABLES */
+
+:root {
+  --text-color: #777;
+  --text-color-light: #ccc;
+  --border-color: #eee;
+  --bg-color: #777;
+  --neutral-color: #fff;
+}
+
+/* GENERAL */
+
+* {
+  box-sizing: border-box;
+}
+
+header {
   display: block;
+  width: 100%;
+  padding: 1.75em 0;
+  border-bottom: 1px solid var(--border-color);
+  background: var(--neutral-color);
+}
+
+header #logo {
+  font-size: 175%;
+  text-align: center;
+  color: var(--linq-green);
+  line-height: 1;
+}
+
+header #logo .icon {
+  padding-right: 0.25em;
+}
+
+// main {
+//   display: block;
+//   margin: 0 auto;
+//   margin-top: 5em;
+//   max-width: 50em;
+// }
+
+/* GRID */
+
+.row {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.rowMiddle {
+  align-items: center;
+}
+
+.col {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  flex-grow: 1;
+  flex-basis: 0;
+  max-width: 100%;
+  text-align: center;
+  align-items: center;
+}
+.colStart {
+  box-sizing: border-box;
+  text-align: center;
+  justify-content: center;
+}
+.colStart:hover {
+  background: #f4faff;
+  border-radius: 1em;
+}
+
+.colCenter {
+  /* justify-content: center; */
+  text-align: center;
+}
+
+.colEnd {
+  justify-content: center;
+  text-align: center;
+}
+.colEnd:hover {
+  background: #f4faff;
+}
+
+/* Calendar */
+.calWrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.cal {
+  display: block;
+  position: relative;
+  width: 70%;
+  background: var(--neutral-color);
+  border: 1px solid var(--border-color);
+}
+.upcoming {
+  width: 20%;
+}
+
+.cal .header {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 115%;
+  padding: 1.5em 0;
+  border-bottom: 1px solid var(--border-color);
+}
+
+.cal .header .icon {
+  cursor: pointer;
+  transition: 0.15s ease-out;
+}
+
+.cal .header .icon:hover {
+  transform: scale(1.75);
+  transition: 0.25s ease-out;
+  color: var(--linq-green);
+}
+
+.cal .header .icon:first-of-type {
+  margin-left: 1em;
+}
+
+.cal .header .icon:last-of-type {
+  margin-right: 1em;
+}
+
+button {
+  color: var(--text-color);
+  background: #f4faff;
+  font-size: 0.5em;
+  padding: 0.5em;
+  width: auto;
+  text-transform: uppercase;
+  border-radius: 0.5em;
+}
+
+button:hover {
+  background: rgba(29, 146, 254, 0.4);
+}
+
+.cal .days {
+  text-transform: uppercase;
+  font-weight: 400;
+  color: var(--text-color-light);
+  font-size: 70%;
+  padding: 0.75em 0;
+  border-bottom: 1px solid var(--border-color);
+}
+
+.cal .body .cell {
+  position: relative;
+  height: 5em;
+  border-right: 1px solid var(--border-color);
+  overflow: hidden;
+  cursor: pointer;
+  background: var(--neutral-color);
+  transition: 0.25s ease-out;
+}
+
+.cal .body .cell:hover {
+  background: var(--border-color);
+  transition: 0.5s ease-out;
+}
+
+.cal .body .selected {
+  border-left: 10px solid transparent;
+  border-image: linear-gradient(
+    45deg,
+    var(--linq-green) 0%,
+    rgba(142, 187, 84, 0.4) 40%
+  );
+  border-image-slice: 1;
+}
+
+.cal .body .row {
+  border-bottom: 1px solid var(--border-color);
+}
+
+.cal .body .row:last-child {
+  border-bottom: none;
+}
+
+.cal .body .cell:last-child {
+  border-right: none;
+}
+
+.cal .body .cell .number {
+  position: absolute;
+  font-size: 82.5%;
+  line-height: 1;
+  top: 0.75em;
+  right: 0.75em;
+  font-weight: 700;
+}
+
+.cal .body .disabled {
+  color: var(--text-color-light);
+  pointer-events: none;
+}
+
+.cal .body .cell .bg {
+  font-weight: 700;
+  line-height: 1;
+  color: var(--linq-green);
+  opacity: 0;
+  font-size: 8em;
+  position: absolute;
+  top: -0.2em;
+  right: -0.05em;
+  transition: 0.25s ease-out;
+  letter-spacing: -0.07em;
+}
+
+.cal .body .cell:hover .bg,
+.cal .body .selected .bg {
+  opacity: 0.1;
+  transition: 0.5s ease-in;
+}
+
+.cal .body .cell:hover .number {
+  visibility: hidden;
+}
+
+.cal .body .col {
+  flex-grow: 0;
+  flex-basis: calc(100% / 7);
+  width: calc(100% / 7);
+}
+
+@media (pointer: coarse) {
+  @media screen and (max-width: $breakpoint-extra-large) {
+    .calWrapper {
+      width: 90%;
+      margin-left: 5%;
+    }
+  }
+}
+
+@media screen and (max-width: $breakpoint-medium) {
+  .calWrapper {
+    flex-direction: column;
+  }
+  .cal,
+  .upcoming {
+    align-self: center;
+    width: 90%;
+    margin-bottom: 3rem;
+  }
 }
