got the nextevent modal looking pretty good

--- a/src/components/EventModal.module.scss
+++ b/src/components/EventModal.module.scss
@@ -8,6 +8,11 @@
     background-color: var(--dark-button);
   }
 }
+.mImage {
+  float: right;
+  height: 5rem;
+  width: auto;
+}
 .mFooter {
   display: flex;
   justify-content: space-around;
