--- a/src/pages/Calendar/Calendar.module.scss
+++ b/src/pages/Calendar/Calendar.module.scss
@@ -298,14 +298,24 @@ button:hover {
   color: var(--linq-green);
   // padding: 0 0 0.5rem 0;
 }
+
+.nextEventsList {
+  width: 100%;
+  padding: 2rem;
+  flex-direction: row;
+  justify-content: space-between;
+}
 .eventPicWrapper {
   width: 15%;
+  flex-grow: 1;
 }
 .eventPic {
-  width: 100%;
+  max-width: 100%;
 }
 .eventInfoWrapper {
-  width: 80%;
+  width: 70%;
+  margin: 0 2.5%;
+  flex-grow: 2;
 }
 
 @media (pointer: coarse) {
