--- a/src/pages/Calendar/Calendar.module.scss
+++ b/src/pages/Calendar/Calendar.module.scss
@@ -120,6 +120,7 @@ header #logo .icon {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  align-items: center;
 }
 
 .cal {
@@ -130,7 +131,6 @@ header #logo .icon {
   border: 1px solid var(--border-color);
 }
 .nextEvent {
-  width: 20%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -299,6 +299,7 @@ button:hover {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  text-align: center;
   padding-bottom: 2%;
   font-size: 1.4em; /* change icon size */
   position: relative;
@@ -329,7 +330,9 @@ button:hover {
   color: var(--linq-green);
   // padding: 0 0 0.5rem 0;
 }
-
+.nextEvent {
+  text-align: center;
+}
 .nextEventsList {
   width: 100%;
   padding: 2rem;
