final touches before figuring out mailchimp

--- a/src/components/NavBar.module.scss
+++ b/src/components/NavBar.module.scss
@@ -4,8 +4,7 @@
   min-height: var(--nav-height);
   width: 100vw;
   max-width: 100vw;
-  background-color: transparent !important;
-  position: static;
+  // background-color: transparent !important;
 }
 button,
 .rightMargin1 {
