--- a/src/pages/About/About.module.scss
+++ b/src/pages/About/About.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/custom-media.scss';
 
 .about {
-  padding: 0 0 var(--footer-height);
+  padding: var(--nav-height) 0 var(--footer-height) 0;
   display: flex;
   flex-direction: column;
   position: relative;
@@ -10,6 +10,12 @@
   align-self: flex-end;
   margin: 2rem 3rem;
   color: #000000;
+  @media (pointer: coarse) {
+    @media screen and (max-width: $breakpoint-large) {
+      align-self: center;
+      margin: 2rem 0;
+    }
+  }
 }
 .section1 {
   position: relative;
