--- a/src/pages/Admin/Admin.module.scss
+++ b/src/pages/Admin/Admin.module.scss
@@ -2,7 +2,7 @@
 @import '../../styles/custom-properties.scss';
 
 .admin {
-  padding: 0;
+  padding: var(--nav-height) 0 var(--footer-height) 0;
   display: flex;
   flex-direction: column;
   align-items: center;
