--- a/src/pages/Newsletter/Newsletter.module.scss
+++ b/src/pages/Newsletter/Newsletter.module.scss
@@ -2,7 +2,7 @@
 @import '../../styles/custom-properties.scss';
 
 .newsletter {
-  padding: 0 0 var(--footer-height) 0;
+  padding: var(--nav-height) 0 var(--footer-height) 0;
   display: flex;
   flex-direction: column;
   position: relative;
@@ -14,7 +14,10 @@
   margin: 2rem 3rem;
   color: #000000;
   @media (pointer: coarse) {
-    margin: 2rem 1rem;
+    @media screen and (max-width: $breakpoint-large) {
+      align-self: center;
+      margin: 2rem 0;
+    }
   }
 }
 .columns {
