--- a/src/pages/Resources/Resources.module.scss
+++ b/src/pages/Resources/Resources.module.scss
@@ -2,7 +2,7 @@
 @import '../../styles/custom-properties.scss';
 
 .resources {
-  padding: 0 0 var(--footer-height) 0;
+  padding: var(--nav-height) 0 var(--footer-height) 0;
   display: flex;
   flex-direction: column;
   position: relative;
@@ -16,6 +16,12 @@
   align-self: flex-end;
   margin: 2rem 3rem;
   color: #000000;
+  @media (pointer: coarse) {
+    @media screen and (max-width: $breakpoint-large) {
+      align-self: center;
+      margin: 2rem 0;
+    }
+  }
 }
 .chunkArea {
   width: 100%;
