--- a/src/pages/Support/Support.module.scss
+++ b/src/pages/Support/Support.module.scss
@@ -2,7 +2,7 @@
 @import '../../styles/custom-properties.scss';
 
 .support {
-  padding: 0 0 var(--footer-height) 0;
+  padding: var(--nav-height) 0 var(--footer-height) 0;
   display: flex;
   flex-direction: column;
   position: relative;
@@ -22,6 +22,12 @@
   align-self: flex-end;
   margin: 2rem 3rem;
   color: var(--lightest-gray);
+  @media (pointer: coarse) {
+    @media screen and (max-width: $breakpoint-large) {
+      align-self: center;
+      margin: 2rem 0;
+    }
+  }
 }
 .donate {
   @include lightButton;
