fixed bugs,inc conditional render for NextEvent in calendar only if exists, mobile spacing on services page, ...

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -39,4 +39,9 @@ em {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  @media (pointer: coarse) {
+    @media screen and (max-width: $breakpoint-medium) {
+      font-size: larger;
+    }
+  }
 }
