--- a/src/pages/Services/Services.module.scss
+++ b/src/pages/Services/Services.module.scss
@@ -37,16 +37,6 @@
     }
   }
 }
-.spacer {
-  @media screen and (max-width: $breakpoint-medium) {
-    display: none;
-  }
-  @media (pointer: coarse) {
-    @media screen and (max-width: $breakpoint-extra-large) {
-      display: none;
-    }
-  }
-}
 .singleColumn {
   display: flex;
   flex-direction: column;
@@ -54,7 +44,7 @@
   align-items: center;
   @media screen and (max-width: $breakpoint-medium) {
     max-width: 90%;
-    margin: 1rem 5% !important;
+    margin: 0.5rem 5% !important;
   }
   @media (pointer: coarse) {
     @media screen and (max-width: $breakpoint-extra-large) {
@@ -73,7 +63,16 @@
 .singleColumn > p {
   text-align: center;
 }
-
+.imageWrapper {
+  width: 100%;
+  height: 18rem;
+}
+.middleBlock {
+  margin-top: 9rem;
+  @media screen and (max-width: $breakpoint-medium) {
+    margin-top: inherit;
+  }
+}
 .contactButton {
   @include darkButton;
   text-align: center;
