--- a/src/pages/Landing/Landing.module.scss
+++ b/src/pages/Landing/Landing.module.scss
@@ -18,6 +18,7 @@
 .buttonRow {
   height: 80vh;
   min-width: 100vw;
+  max-width: 100vw;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
