changed event buttons inside calendar cells to only show start time, but display title on hover

--- a/src/pages/Board/Board.module.scss
+++ b/src/pages/Board/Board.module.scss
@@ -27,6 +27,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  @media screen and (max-width: $breakpoint-medium) {
+    padding: 1.5rem;
+  }
 }
 .person h3 {
   align-self: flex-start;
