using react-responsive,conditionally rendered the days of the week with abbreviated names for smaller screens, full names otherwise

--- a/src/components/EventModal.module.scss
+++ b/src/components/EventModal.module.scss
@@ -21,6 +21,9 @@
 .mobileModalButton {
   padding: 0;
   font-size: small;
+  @media screen and (max-width: $breakpoint-medium) {
+    font-size: x-small;
+  }
 }
 .mImageDiv {
   width: 20%;
