hoping the pledge update works on the actual site bc it's not working on localhost

--- a/src/pages/About/About.module.scss
+++ b/src/pages/About/About.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/custom-media.scss';
 
 .about {
-  padding: var(--nav-height) 0 var(--footer-height) 0;
+  padding-top: var(--nav-height);
   display: flex;
   flex-direction: column;
   position: relative;
