--- a/src/pages/Vote/Vote.module.scss
+++ b/src/pages/Vote/Vote.module.scss
@@ -1,7 +1,8 @@
 @import '../../styles/custom-media.scss';
 @import '../../styles/custom-properties.scss';
 
-.newsletter {
+.vote {
+  position: relative;
   padding-top: var(--nav-height);
   display: flex;
   flex-direction: column;
@@ -9,9 +10,22 @@
   background-color: var(--lightest-gray);
 }
 
+.stripe {
+  width: 100%;
+  height: 15vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--linq-green);
+  margin: 1rem 0;
+}
+.stripe > * {
+  margin: 0;
+  color: var(--white);
+}
 .translate {
   align-self: flex-end;
-  margin: 2rem 3rem;
+  margin: 0 3rem;
   color: #000000;
   @media (pointer: coarse) {
     @media screen and (max-width: $breakpoint-large) {
@@ -20,9 +34,12 @@
     }
   }
 }
-.columns {
+
+.column {
   display: flex;
-  justify-content: space-evenly;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   @media (pointer: coarse) {
     @media screen and (max-width: $breakpoint-extra-large) {
       flex-direction: column;
@@ -32,21 +49,27 @@
     flex-direction: column;
   }
 }
-.columns > div {
-  max-width: 46%;
-  @media (pointer: coarse) {
-    @media screen and (max-width: $breakpoint-extra-large) {
-      max-width: 90%;
-      margin: 1rem 5%;
-    }
-  }
-  @media screen and (max-width: $breakpoint-medium) {
-    max-width: 90%;
-    margin: 1rem 5%;
-  }
+
+.column * {
+  margin: 0.5rem;
 }
-.submit {
-  @include darkButton;
+
+.titleBold {
+  font-size: xx-large;
+  font-weight: bolder;
+  text-shadow: 0px 2px, 2px 0px, 2px 2px;
+  letter-spacing: 0.2rem;
+}
+.title {
+  font-size: xx-large;
+}
+.titleBold > *,
+.title > * {
+  text-align: center;
+}
+.green {
+  @include greenButton;
+  min-width: 20rem;
 }
 
 .image {
