--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -34,6 +34,8 @@ em {
 
 .App {
   min-height: 100vh;
+  // max-height: 100vh;
+  overflow: hidden;
   min-width: 100vw;
   max-width: 100vw;
   display: flex;
