--- a/src/components/Footer.module.scss
+++ b/src/components/Footer.module.scss
@@ -1,16 +1,17 @@
 @import '../styles/custom-media.scss';
 
 .footer {
-  position: absolute;
+  position: sticky;
   bottom: 0;
   left: 0;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  align-items: center;
   width: 100vw;
   max-width: 100vw;
   height: var(--footer-height);
-  padding-top: 0.5rem;
+  padding: var(--vertical-footer-padding) 0;
   text-align: center;
   background-color: var(--lightest-gray);
 }
@@ -45,8 +46,9 @@
 .icon {
   color: #000000;
   font-size: calc(20px + 1vw);
+  color: var(--linq-green);
   &:hover {
-    color: var(--linq-green);
+    color: var(--black);
   }
 }
 .contact {
