--- a/src/pages/Calendar/Calendar.module.scss
+++ b/src/pages/Calendar/Calendar.module.scss
@@ -2,7 +2,7 @@
 @import '../../styles/custom-properties.scss';
 
 .calendar {
-  padding: var(--nav-height) 0 var(--footer-height) 0;
+  padding-top: var(--nav-height);
   display: flex;
   flex-direction: column;
   align-items: center;
