--- a/src/pages/Support/Support.module.scss
+++ b/src/pages/Support/Support.module.scss
@@ -2,7 +2,7 @@
 @import '../../styles/custom-properties.scss';
 
 .support {
-  padding: var(--nav-height) 0 var(--footer-height) 0;
+  padding-top: var(--nav-height);
   display: flex;
   flex-direction: column;
   position: relative;
