--- a/src/pages/Vote/Vote.module.scss
+++ b/src/pages/Vote/Vote.module.scss
@@ -55,18 +55,17 @@
 }
 
 .titleBold {
-  font-size: xx-large;
   font-weight: bolder;
   text-shadow: 0px 2px, 2px 0px, 2px 2px;
   letter-spacing: 0.2rem;
 }
+.titleBold,
 .title {
+  width: 100%;
+  text-align: center;
   font-size: xx-large;
 }
-.titleBold > *,
-.title > * {
-  text-align: center;
-}
+
 .green {
   @include greenButton;
   min-width: 20rem;
