added vp Eric and had to adjust the way images displayed

--- a/src/pages/Board/Board.module.scss
+++ b/src/pages/Board/Board.module.scss
@@ -68,6 +68,7 @@
   background-repeat: no-repeat;
   background-origin: content-box;
   background-position: center center;
+  background-size: contain;
 
   @media screen and (max-width: $breakpoint-medium) {
     width: 90%;
