--- a/src/pages/Join/Join.module.scss
+++ b/src/pages/Join/Join.module.scss
@@ -16,7 +16,12 @@
     }
   }
 }
-
+.jobList {
+  padding: 0 15%;
+  @media screen and (max-width: 1024px) {
+    padding: 0 5%;
+  }
+}
 .posting {
   flex-grow: 100;
   padding: 2rem 0;
@@ -44,4 +49,20 @@
 .footerWrapper {
   position: fixed;
   bottom: 0;
+}
+.twoCol {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border-bottom: 2px solid var(--black);
+  @media screen and (max-width: 1024px) {
+    flex-direction: column;
+  }
+}
+.firstCol {
+  flex: 1;
+  margin-right: 3rem;
+  @media screen and (max-width: 1024px) {
+    margin-right: 0;
+  }
 }
