--- a/src/components/NavBar.module.scss
+++ b/src/components/NavBar.module.scss
@@ -2,9 +2,9 @@
 
 .navBar {
   min-height: var(--nav-height);
+  max-height: var(--nav-height);
   width: 100vw;
   max-width: 100vw;
-  // background-color: transparent !important;
   @media (pointer: coarse) {
     @media screen and (max-width: $breakpoint-medium) {
       font-size: larger;
@@ -25,7 +25,7 @@ button,
 }
 
 .logo {
-  max-height: var(--nav-height);
+  max-height: calc(var(--nav-height) - 8px);
 }
 #collasible-nav-dropdown:after {
   display: none;
