adjusted backround color on navbar so that it is not transparent in smaller and mobile screens--there was some ugly effects with being able to see text behid navbar before

--- a/src/components/NavBar.module.scss
+++ b/src/components/NavBar.module.scss
@@ -16,12 +16,15 @@ button,
   margin-right: 1rem;
 }
 .toRight {
-  background-color: var(--white);
   text-align: right !important;
   @media (pointer: coarse) {
     @media screen and (max-width: $breakpoint-medium) {
       font-size: larger;
+      background-color: var(--white);
     }
+  }
+  @media screen and (max-width: $breakpoint-large) {
+    background-color: var(--white);
   }
 }
 
